# SpecificEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GinCommon.props  README.md  SomethingSpecific.sln  vcpkg.json  workspace.code-workspace
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: Application.cpp
Engine/src/Core/: MasterGame.cpp  MasterGame.h
Engine/src/Core/Graphics/: Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
Engine/src/Core/Inputs/: Controller.cpp  Controller.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Processor.cpp  Processor.h
Engine/src/Core/Resources/: ResourceLoader.cpp  ResourceLoader.h
Engine/src/Demo/: Game.cpp  Game.h
Gin/: CMakeLists.txt  Gin.vcxproj  Gin.vcxproj.filters
Gin/src/: Gin.h  GinPch.cpp  GinPch.h
Gin/src/Components/: Body.hpp  Collider.hpp  Input.hpp  Sprite.hpp  Transform.hpp
Gin/src/Core/: MasterGame.cpp  MasterGame.h  Scene.cpp  Scene.h
Gin/src/Display/: Actor.cpp  Actor.h  Sprite.cpp  Sprite.h  Stage.cpp  Stage.h
Gin/src/ECS/: Engine.cpp  Engine.h  Entity.cpp  Entity.h  SystemContext.h
Gin/src/ECS/Components/: ComponentType.h  DisplayComponent.h  IdentityComponent.h  PositionComponent.h  RigidBodyComponent.h  VelocityComponent.h
Gin/src/ECS/Contracts/: IComponent.h  IEventManager.h  INode.h  IRenderableSystem.h  ISystemContext.h  IUpdateableSystem.h
Gin/src/ECS/Events/: Event.h  EventManager.cpp  EventManager.h
Gin/src/ECS/Nodes/: Rendernode.h
Gin/src/ECS/System/: RenderSystem.cpp  RenderSystem.h  SystemTypes.h  Systems.h
Gin/src/Events/: Delegate.h  Dispatcher.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventManager.cpp  EventManager.h  EventTypes.h
Gin/src/Graphics/: Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
Gin/src/Inputs/: Action.hpp  Controller.cpp  Controller.h  InputType.hpp  Keyboard.cpp  Keyboard.h  Keys.h  Mouse.cpp  Mouse.h  Processor.cpp  Processor.h  Summoner.cpp  Summoner.h
Gin/src/Math/: Collision.cpp  Collision.h
Gin/src/Maths/: Maths.h  Vector2.h
Gin/src/Resources/: GinConfig.hpp  ResourceLoader.cpp  ResourceLoader.h
Gin/src/Systems/: InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  RenderSystem.hpp  TestSystem.hpp
Gin/src/Utils/: Assert.cpp  Assert.h  Log.cpp  Log.h  Macros.h
Sandbox/: CMakeLists.txt  DemoEvent.cpp  Sandbox.vcxproj  Sandbox.vcxproj.filters  vcpkg.json
Sandbox/rsc/: config.json
Sandbox/rsc/Shaders/: sprite.vs
Sandbox/src/: Application.cpp  EventsExample.h  Game.cpp  Game.h  GraphSearchApp.cpp  GraphSearchApp.h  Node.cpp  Node.h
